external-crates/move/crates/move-compiler/tests/sui_mode/id_leak/private_pack.exp
error[E04001]: restricted visibility
   ┌─ tests/sui_mode/id_leak/private_pack.move:19:9
   │
 5 │     struct A has key {
   │            - Struct may only be constructed in the module in which they are declared
   ·
19 │         A { id }
   │         ^^^^^^^^ Invalid instantiation of 'a::a::A'

